--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,10 +9,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["contentScript.js"],
+      "run_at": "document_end"
     }
   ],
-  "permissions": ["storage", "scripting"],
+  "permissions": ["storage", "scripting", "activeTab"],
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
